add card styling to blog posts

--- a/css/main.css
+++ b/css/main.css
@@ -322,13 +322,10 @@ ul.cards li:hover {
 	transition: 160ms ease-in-out all;
 }
 
-a.cards {
-	position: relative;
+.card-link {
 	display: block;
 	text-decoration: none;
 	color: inherit;
-	height: 100%;
-	width: 100%;
 }
 
 #contact ~ p a {
