--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,9 @@
 layout: default
 ---
 
-<h2>{{ page.title }}</h2>
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+<div class=post-content>
+	<h2>{{ page.title }}</h2>
+	<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
 
-{{ content }}
+	{{ content }}
+</div>
