--- a/css/main.css
+++ b/css/main.css
@@ -38,10 +38,14 @@ main {
 	min-height: 600px;
 }
 
-main p {
+.post-content {
 	text-align: left;
-	margin: 0 auto;
-	max-width: 940px;
+	margin: auto;
+	max-width: 640px;
+}
+
+.post-content img {
+	margin-bottom: 40px;
 }
 
 a {
