--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montez&family=Roboto&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Montez&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="icon" href="https://static-cdn.jtvnw.net/emoticons/v2/307350032/default/light/3.0">
 
@@ -106,7 +106,7 @@
 <script>
 const gallery = {};
 // IDs to display as a gallery
-const galleryIds = ["#art", "#events", "#modeling"];
+const galleryIds = ["#art", "#events", "#modeling", "#gallery"];
 // gallery script to view images in full screen
 galleryIds.forEach(galleryId => {
   document.querySelectorAll(`${galleryId} ~ p img`).forEach(img => {
