--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	  <meta property="og:title" content="Devicat">
+  <meta property="og:description" content="Full-time artist & Twitch partnered streamer.">
+  <meta property="og:url" content="https://devicat.art">
+  <meta property="og:image" content="https://static-cdn.jtvnw.net/jtv_user_pictures/981b13fc-0a3b-4638-8624-f9dee1216800-channel_offline_image-1920x1080.png">
 
     <!-- CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
