--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,9 @@ body {
 	font-family: "Roboto", sans-serif;
 	line-height: 1.6;
 	position: relative;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 }
 
 body::before {
@@ -55,6 +58,7 @@ main {
 	animation: fadeIn 0.5s ease-out;
 	position: relative;
 	backdrop-filter: blur(8px);
+	flex: 1 0 auto;
 }
 
 main::before {
@@ -155,6 +159,7 @@ footer {
 	background: var(--white);
 	padding: 48px;
 	position: relative;
+	flex: 0 0 auto;
 }
 
 footer::before {
