update gallery script to support webp files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -114,7 +114,7 @@ const galleryIds = ["#art", "#events", "#modeling", "#gallery"];
 // gallery script to view images in full screen
 galleryIds.forEach(galleryId => {
   document.querySelectorAll(`${galleryId} ~ p img`).forEach(img => {
-    const imgname = "#" + /img\/(.*)\.(png|jpg|jpeg)$/.exec(img.src)[1];
+    const imgname = "#" + /img\/(.*)\.(png|jpg|jpeg|webp)$/.exec(img.src)[1];
     img.onclick = gallery[imgname] = function(ev) {
       document.querySelector('#popup img').src = img.src;
       document.querySelector('#popup figcaption').textContent = img.alt;
