ensure hidden screenreader text is actually hidden

--- a/css/main.css
+++ b/css/main.css
@@ -725,6 +725,23 @@ nav > .nav-menucontainer {
     margin: 0.5rem 1rem;
 }
 
+
+.newsletter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1.6rem;
+}
+
+/* Screenreader */
+.screenreader {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
+
 @keyframes fadeIn {
     0% { opacity: 0; transform: translateY(10px); }
     100% { opacity: 1; transform: translateY(0); }
