Attempt to fix title type

--- a/css/main.css
+++ b/css/main.css
@@ -238,6 +238,7 @@ img {
 h1#gallery,
 h1#art,
 h1#events,
+h1#catalog,
 h1#modeling {
     text-align: center;
     font-family: "Montez", sans-serif;
